[tool.poetry]
name = "flet-onesignal"
version = "0.1.0"
description = "Flutter FletOneSignal package integration for Python Flet."
authors = ["brunobrown <brunobrown.86@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flet-onesignal"}]

classifiers = [
    "Topic :: Software Development :: Debuggers",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.urls]
"GitHub" = "https://github.com/brunobrown/flet-onesignal"
"Bug Tracker" = "https://github.com/brunobrown/flet-onesignal/issues"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
